Optimize FuzzySearch in IndexService
The search method in FuzzySearch has been optimized to increase readability and efficiency. The code was trimmed by applying functional programming style using Java streams. The termHits allocation process was also simplified to eliminate unnecessary collections' creation.